[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
bytes = "1.3.0"
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.152", features = [ "derive" ] }
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = [ "full" ] }
tokio-util = { version = "0.7.4", features = [ "net", "codec"] }
